RESOLVED FIXED94841
[V8] OwnHandle is a bit of a misnomer
https://bugs.webkit.org/show_bug.cgi?id=94841
Summary [V8] OwnHandle is a bit of a misnomer
Adam Barth
Reported 2012-08-23 13:40:43 PDT
[V8] OwnHandle is a bit of a misnomer
Attachments
Patch (14.39 KB, patch)
2012-08-23 13:42 PDT, Adam Barth
eric: review+
eric: commit-queue+
Adam Barth
Comment 1 2012-08-23 13:42:01 PDT
Adam Barth
Comment 2 2012-08-23 14:45:13 PDT
Note You need to log in before you can comment on or make changes to this bug.