[V8] OwnHandle is a bit of a misnomer https://bugs.webkit.org/show_bug.cgi?id=94841

Reviewed by Eric Seidel.

You don't really own the handle in the same way that you own a pointer
with OwnPtr. This class is more correctly called ScopedPersistent
because it just forces you to balance New() and Dispose() calls.

* WebCore.gypi:
* bindings/v8/JavaScriptCallFrame.h:
(JavaScriptCallFrame):
* bindings/v8/OwnHandle.h: Removed.
* bindings/v8/ScheduledAction.h:
(ScheduledAction):
* bindings/v8/ScopedPersistent.h: Copied from Source/WebCore/bindings/v8/OwnHandle.h.
(ScopedPersistent):
(WebCore::ScopedPersistent::ScopedPersistent):
(WebCore::ScopedPersistent::~ScopedPersistent):
* bindings/v8/ScriptDebugServer.cpp:
(WebCore::ScriptDebugServer::compileScript):
(WebCore::ScriptDebugServer::runScript):
* bindings/v8/ScriptDebugServer.h:
(ScriptDebugServer):
* bindings/v8/ScriptInstance.h:
(V8ScriptInstance):
* bindings/v8/V8PerContextData.h:
(V8PerContextData):


Canonical link: https://commits.webkit.org/112706@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@126484 268f45cc-cd09-0410-ab3c-d52691b4dbfc